--- a/FirstProjectSecondCourse/nbproject/project.properties
+++ b/FirstProjectSecondCourse/nbproject/project.properties
@@ -29,10 +29,12 @@ dist.jar=${dist.dir}/FirstProjectSecondCourse.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mail.jar=C:\\Users\\pc\\Downloads\\javamail-1.4.7\\mail.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.javazoom.classpath}
+    ${libs.javazoom.classpath}:\
+    ${file.reference.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
