--- a/FirstProjectSecondCourse/nbproject/project.properties
+++ b/FirstProjectSecondCourse/nbproject/project.properties
@@ -29,12 +29,17 @@ dist.jar=${dist.dir}/FirstProjectSecondCourse.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jcommon-1.0.23.jar=C:\\Users\\pc\\Downloads\\jfreechart-1.0.19\\lib\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19-swt.jar=C:\\Users\\pc\\Downloads\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19-swt.jar
+file.reference.jfreechart-1.0.19.jar=C:\\Users\\pc\\Downloads\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19.jar
 file.reference.mail.jar=C:\\Users\\pc\\Downloads\\javamail-1.4.7\\mail.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.javazoom.classpath}:\
-    ${file.reference.mail.jar}
+    ${file.reference.mail.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19-swt.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
